Add kernel args

--- a/fwup.conf
+++ b/fwup.conf
@@ -67,6 +67,8 @@ task complete {
         uboot_setenv(uboot-env, "a.nerves_fw_uuid", "\${FWUP_META_UUID}")
         uboot_setenv(uboot-env, "a.kernel_lba", "${KERNEL_A_OFFSET}")
         uboot_setenv(uboot-env, "b.kernel_lba", "${KERNEL_B_OFFSET}")
+        uboot_setenv(uboot-env, "a.kernel_args", "root=/dev/vda1 rootfstype=squashfs")
+        uboot_setenv(uboot-env, "b.kernel_args", "root=/dev/vda2 rootfstype=squashfs")
         uboot_setenv(uboot-env, "upgrade_available", "0")
         uboot_setenv(uboot-env, "bootcount", "0")
     }
