experimental memory usage reductions, seem to work

--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -49,6 +49,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
 BR2_PACKAGE_WPA_SUPPLICANT_WPA3=y
 BR2_PACKAGE_WPA_SUPPLICANT_CTRL_IFACE=y
 BR2_PACKAGE_WPA_SUPPLICANT_SMARTCARD=y
+BR2_PACKAGE_UTIL_LINUX_ZRAMCTL=y
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_PATCH="${NERVES_DEFCONFIG_DIR}/uboot"
 BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG=y
