Fix fwup configuration

--- a/fwup.conf
+++ b/fwup.conf
@@ -2,10 +2,6 @@ require-fwup-version="1.0.0"
 
 include("${NERVES_SDK_IMAGES:-.}/fwup_include/fwup-common.conf")
 
-file-resource uboot-env.bin {
-    host-path = "${NERVES_SYSTEM}/images/uboot-env.bin"
-}
-
 file-resource Image {
     host-path = "${NERVES_SYSTEM}/images/Image"
     assert-size-lte = ${KERNEL_COUNT}
@@ -35,18 +31,21 @@ mbr mbr {
     }
 }
 
+# Location where installed firmware information is stored.
+# While this is called "u-boot", u-boot isn't involved in this
+# setup. It just provides a convenient key/value store format.
+uboot-environment uboot-env {
+    block-offset = ${UBOOT_ENV_OFFSET}
+    block-count = ${UBOOT_ENV_COUNT}
+}
+
 task complete {
     require-unmounted-destination = true
 
     on-init {
         mbr_write(mbr)
-    }
 
-    on-resource uboot-env.bin {
-        # Boot to the A partition first and don't fail back.
-        # If this fails, we bricked the board with no recovery.
-        raw_write(${UBOOT_ENV_OFFSET})
-
+        uboot_clearenv(uboot-env)
         # Include provisioning instructions
         include("${NERVES_PROVISIONING}")
 
