--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,41 +1,55 @@
 name: CI
 
-on: push
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+on: [push]
+
+env:
+  OTP_VERSION: 27.3.4
+  ELIXIR_VERSION: 1.18.4-otp-27
+  NERVES_BOOTSTRAP_VERSION: 1.13.1
 
 permissions:
   id-token: write
-  contents: write
+  contents: read
 
 jobs:
-  build:
-    runs-on: ubuntu-24.04
-    outputs:
-      artifact_filename: ${{ steps.nerves.outputs.artifact_filename }}
+  get-br-dependencies:
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-      - name: Build
-        id: nerves
-        uses: redwirelabs/build-nerves-system-action@v1
-  draft-release:
-    runs-on: ubuntu-24.04
-    needs: build
-    if: github.ref_type == 'tag'
-    steps:
-      - uses: actions/checkout@v4
-      - name: Fetch artifact
-        uses: actions/download-artifact@v4
+      - uses: gridpoint-com/actions-nerves-system@v1
+      - name: Get Buildroot Dependencies
+        uses: ./.actions/get-br-dependencies
         with:
-          name: ${{ needs.build.outputs.artifact_filename }}
-      - name: Create draft release
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          gh release \
-            create \
-              ${{ github.ref_name }} \
-              ${{ needs.build.outputs.artifact_filename }} \
-            --title ${{ github.ref_name }} \
-            --draft
+          otp-version: ${{ env.OTP_VERSION }}
+          elixir-version: ${{ env.ELIXIR_VERSION }}
+          nerves-bootstrap-version: ${{ env.NERVES_BOOTSTRAP_VERSION }}
+          push-to-download-site: false
+          download-site-url: ${{ vars.PUBLIC_S3_SITE }}
+          download-site-bucket-uri: ${{ vars.S3_BUCKET }}
+          aws-role: ${{ secrets.AWS_ROLE }}
+          aws-region: ${{ vars.AWS_REGION }}
+  build-system:
+    needs: [get-br-dependencies]
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: gridpoint-com/actions-nerves-system@v1
+      - name: Build nerves_system
+        uses: ./.actions/build-system
+        with:
+          otp-version: ${{ env.OTP_VERSION }}
+          elixir-version: ${{ env.ELIXIR_VERSION }}
+          nerves-bootstrap-version: ${{ env.NERVES_BOOTSTRAP_VERSION }}
+  deploy-system:
+    needs: [build-system]
+    if: github.ref_type == 'tag'
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: gridpoint-com/actions-nerves-system@v1
+      - name: Deploy nerves_system
+        uses: ./.actions/deploy-system
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
