--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -37,3 +37,4 @@ BR2_NERVES_SYSTEM_NAME="nerves_system_qemu_aarch64"
 BR2_NERVES_ADDITIONAL_IMAGE_FILES="${NERVES_DEFCONFIG_DIR}/fwup.conf"
 BR2_PACKAGE_NBTTY=y
 BR2_PACKAGE_NERVES_CONFIG=y
+BR2_PACKAGE_LITTLE_LOADER=y
