--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -33,6 +33,7 @@ BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_NERVES_PATH}/board/nerves-common/busy
 BR2_PACKAGE_F2FS_TOOLS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBMNL=y
+BR2_PACKAGE_LIBNL=y
 BR2_PACKAGE_UTIL_LINUX_ZRAMCTL=y
 BR2_NERVES_SYSTEM_NAME="nerves_system_qemu_aarch64"
 BR2_NERVES_ADDITIONAL_IMAGE_FILES="${NERVES_DEFCONFIG_DIR}/fwup.conf"
