Fix author in fwup_common

--- a/fwup_include/fwup-common.conf
+++ b/fwup_include/fwup-common.conf
@@ -12,7 +12,7 @@ define(NERVES_FW_DESCRIPTION, "")
 define(NERVES_FW_VERSION, "${NERVES_SDK_VERSION}")
 define(NERVES_FW_PLATFORM, "qemu_aarch64")
 define(NERVES_FW_ARCHITECTURE, "arm")
-define(NERVES_FW_AUTHOR, "Redwire Labs")
+define(NERVES_FW_AUTHOR, "The Nerves Team")
 
 define(NERVES_FW_DEVPATH, "/dev/vda")
 define(NERVES_FW_APPLICATION_PART0_DEVPATH, "/dev/vda3")
