Switch fwup upgrade validation to user upgrade_available, not nerves_fw_validated

--- a/fwup.conf
+++ b/fwup.conf
@@ -100,7 +100,7 @@ task upgrade.a {
 
     # Require that the running version of firmware has been validated.
     # If it has not, then failing back is not guaranteed to work.
-    require-uboot-variable(uboot-env, "nerves_fw_validated", "1")
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
 
     # Verify the expected platform/architecture
     require-uboot-variable(uboot-env, "b.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
@@ -164,7 +164,10 @@ task upgrade.a {
 
 task upgrade.b {
     require-uboot-variable(uboot-env, "nerves_fw_active", "a")
-    require-uboot-variable(uboot-env, "nerves_fw_validated", "1")
+
+    # Require that the running version of firmware has been validated.
+    # If it has not, then failing back is not guaranteed to work.
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
 
     # Verify the expected platform/architecture
     require-uboot-variable(uboot-env, "a.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
