Remove all references to nerves_fw_validated

--- a/fwup.conf
+++ b/fwup.conf
@@ -152,7 +152,7 @@ task upgrade.a {
         # Reset the validation status and boot to A
         # next time.
         uboot_setenv(uboot-env, "nerves_fw_active", "a")
-        uboot_setenv(uboot-env, "nerves_fw_validated", "0")
+        uboot_setenv(uboot-env, "upgrade_available", "0")
         uboot_setenv(uboot-env, "nerves_fw_booted", "0")
         uboot_setenv(uboot-env, "upgrade_available", "1")
         uboot_setenv(uboot-env, "bootcount", "0")
@@ -216,7 +216,6 @@ task upgrade.b {
 
         # Reset the validation status and boot to B next time.
         uboot_setenv(uboot-env, "nerves_fw_active", "b")
-        uboot_setenv(uboot-env, "nerves_fw_validated", "0")
         uboot_setenv(uboot-env, "nerves_fw_booted", "0")
         uboot_setenv(uboot-env, "upgrade_available", "1")
         uboot_setenv(uboot-env, "bootcount", "0")
