--- a/fwup.conf
+++ b/fwup.conf
@@ -152,8 +152,6 @@ task upgrade.a {
         # Reset the validation status and boot to A
         # next time.
         uboot_setenv(uboot-env, "nerves_fw_active", "a")
-        uboot_setenv(uboot-env, "upgrade_available", "0")
-        uboot_setenv(uboot-env, "nerves_fw_booted", "0")
         uboot_setenv(uboot-env, "upgrade_available", "1")
         uboot_setenv(uboot-env, "bootcount", "0")
     }
@@ -216,7 +214,6 @@ task upgrade.b {
 
         # Reset the validation status and boot to B next time.
         uboot_setenv(uboot-env, "nerves_fw_active", "b")
-        uboot_setenv(uboot-env, "nerves_fw_booted", "0")
         uboot_setenv(uboot-env, "upgrade_available", "1")
         uboot_setenv(uboot-env, "bootcount", "0")
     }
@@ -226,7 +223,7 @@ task upgrade.b {
 }
 
 task upgrade.unvalidated {
-    require-uboot-variable(uboot-env, "nerves_fw_validated", "0")
+    require-uboot-variable(uboot-env, "upgrade_available", "1")
 
     on-init {
         error("Please validate the running firmware before upgrading it again.")
