Switch fwup upgrade validation to user upgrade_available (#15)

--- a/fwup-ops.conf
+++ b/fwup-ops.conf
@@ -95,7 +95,7 @@ task revert.a {
 
         # Switch over
         uboot_setenv(uboot-env, "nerves_fw_active", "a")
-        uboot_setenv(uboot-env, "nerves_fw_validated", "1")
+        uboot_setenv(uboot-env, "upgrade_available", "0")
     }
 }
 
@@ -112,7 +112,7 @@ task revert.b {
 
         # Switch over
         uboot_setenv(uboot-env, "nerves_fw_active", "b")
-        uboot_setenv(uboot-env, "nerves_fw_validated", "1")
+        uboot_setenv(uboot-env, "upgrade_available", "0")
     }
 }
 
@@ -174,7 +174,6 @@ task status.fail {
 task validate {
     on-init {
         info("Validate")
-        uboot_setenv(uboot-env, "nerves_fw_validated", "1")
         uboot_setenv(uboot-env, "upgrade_available", "0")
         uboot_setenv(uboot-env, "bootcount", "1")
     }
