--- a/fwup.conf
+++ b/fwup.conf
@@ -100,7 +100,7 @@ task upgrade.a {
 
     # Require that the running version of firmware has been validated.
     # If it has not, then failing back is not guaranteed to work.
-    require-uboot-variable(uboot-env, "nerves_fw_validated", "1")
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
 
     # Verify the expected platform/architecture
     require-uboot-variable(uboot-env, "b.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
@@ -152,8 +152,6 @@ task upgrade.a {
         # Reset the validation status and boot to A
         # next time.
         uboot_setenv(uboot-env, "nerves_fw_active", "a")
-        uboot_setenv(uboot-env, "nerves_fw_validated", "0")
-        uboot_setenv(uboot-env, "nerves_fw_booted", "0")
         uboot_setenv(uboot-env, "upgrade_available", "1")
         uboot_setenv(uboot-env, "bootcount", "0")
     }
@@ -164,7 +162,10 @@ task upgrade.a {
 
 task upgrade.b {
     require-uboot-variable(uboot-env, "nerves_fw_active", "a")
-    require-uboot-variable(uboot-env, "nerves_fw_validated", "1")
+
+    # Require that the running version of firmware has been validated.
+    # If it has not, then failing back is not guaranteed to work.
+    require-uboot-variable(uboot-env, "upgrade_available", "0")
 
     # Verify the expected platform/architecture
     require-uboot-variable(uboot-env, "a.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
@@ -213,8 +214,6 @@ task upgrade.b {
 
         # Reset the validation status and boot to B next time.
         uboot_setenv(uboot-env, "nerves_fw_active", "b")
-        uboot_setenv(uboot-env, "nerves_fw_validated", "0")
-        uboot_setenv(uboot-env, "nerves_fw_booted", "0")
         uboot_setenv(uboot-env, "upgrade_available", "1")
         uboot_setenv(uboot-env, "bootcount", "0")
     }
@@ -224,7 +223,7 @@ task upgrade.b {
 }
 
 task upgrade.unvalidated {
-    require-uboot-variable(uboot-env, "nerves_fw_validated", "0")
+    require-uboot-variable(uboot-env, "upgrade_available", "1")
 
     on-init {
         error("Please validate the running firmware before upgrading it again.")
