--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -39,4 +39,5 @@ BR2_NERVES_SYSTEM_NAME="nerves_system_qemu_aarch64"
 BR2_NERVES_ADDITIONAL_IMAGE_FILES="${NERVES_DEFCONFIG_DIR}/fwup.conf"
 BR2_PACKAGE_NBTTY=y
 BR2_PACKAGE_NERVES_CONFIG=y
+BR2_PACKAGE_NERVES_CONFIG_ACCEPT_RNG_NOTICE=y
 BR2_PACKAGE_LITTLE_LOADER=y
